--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 .App {
   text-align: center;
 }
 
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
-  background: linear-gradient(139deg, #FCC812 0%, #FFB800 100%) !important;
+  background: rgb(253, 195, 11) !important;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
-h1, h2, h3, h4, h5, h6, p, span, button {
-  font-family: 'Poppins', sans-serif; /* Terapkan Poppins ke semua heading, paragraph, span, dan tombol */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+button {
+  font-family: "Poppins", sans-serif; /* Terapkan Poppins ke semua heading, paragraph, span, dan tombol */
   font-weight: bold; /* Terapkan bold ke semua teks */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
