--- a/src/assets/css/Auth/loginStyle.css
+++ b/src/assets/css/Auth/loginStyle.css
@@ -1,5 +1,5 @@
 /* Set global font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .login-page {
   position: fixed;
@@ -113,7 +113,7 @@
   text-align: center;
   font-size: 25px;
   font-weight: 600;
-  line-height: 52px
+  line-height: 52px;
 }
 
 .keypad {
@@ -132,7 +132,7 @@
   font-size: 36px;
   font-weight: bold;
   background-color: #000;
-  color: #FFF;
+  color: #fff;
   border: none;
   border-radius: 10px;
   cursor: pointer;
@@ -146,7 +146,10 @@
 
 /* Efek active (tekan): tombol lebih turun ke sudut kanan bawah */
 .keypad-button:active {
-  transform: translate(5px, 5px); /* Tombol bergerak lebih jauh ke kanan bawah */
+  transform: translate(
+    5px,
+    5px
+  ); /* Tombol bergerak lebih jauh ke kanan bawah */
 }
 
 /* Efek hover dan active untuk tombol CLEAR dan BACKSPACE */
@@ -206,6 +209,12 @@
   font-style: italic;
 }
 
+.SK {
+  font-weight: 600;
+  font-size: 17px !important;
+  font-style: italic;
+}
+
 .buttonSK {
   background: none;
   border: none;
@@ -257,15 +266,15 @@
   background-color: #ffffff;
 }
 .container-modal-sk::-webkit-scrollbar {
-width: 10px; /* Ukuran scroll bar */
+  width: 10px; /* Ukuran scroll bar */
 }
 
 .container-modal-sk::-webkit-scrollbar-thumb {
-background-color: #777777; /* Warna scroll bar */
+  background-color: #777777; /* Warna scroll bar */
 }
 
 .container-modal-sk::-webkit-scrollbar-track {
-background-color: none; /* Background track scroll bar */
+  background-color: none; /* Background track scroll bar */
 }
 .content-modal-sk {
   justify-content: flex-start;
@@ -331,13 +340,13 @@ hr .solid-hr-sk {
 }
 .container-modal-suspend {
   text-align: center;
-  background-color: #F4B000;
+  background-color: #f4b000;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 .error-title-suspend {
-  color: #E53935;
+  color: #e53935;
   font-size: 48px;
   font-weight: bold;
   margin: 0;
@@ -349,13 +358,13 @@ hr .solid-hr-sk {
   margin: 10px 0;
 }
 .error-submessage-suspend {
-  color: #5F5F5F;
+  color: #5f5f5f;
   font-size: 18px;
   margin: 10px 0;
 }
 .contact-button-suspend {
   background-color: #000;
-  color: #FFF;
+  color: #fff;
   padding: 15px 30px;
   border: none;
   border-radius: 10px;
@@ -427,9 +436,9 @@ hr .solid-hr-sk {
   padding: 20px;
   font-size: 24px;
   background-color: #000;
-  color: #FFF;
+  color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: 15px;
   cursor: pointer;
   margin-top: 40px;
   font-size: 35px;
@@ -461,7 +470,7 @@ hr .solid-hr-sk {
 
 .additional-svg {
   background: none;
-  width: 150px;
+  width: 190px;
   height: auto;
 }
 
@@ -512,7 +521,7 @@ hr .solid-hr-sk {
     width: 70px;
     margin-right: 10px; /* Jarak antara help-icon dan SVG */
   }
-  
+
   .additional-svg {
     width: 200px;
     height: auto;
@@ -552,7 +561,7 @@ hr .solid-hr-sk {
     font-weight: 530 !important;
     margin: 0;
   }
-  
+
   .country-code {
     display: block;
     background-color: white;
@@ -564,12 +573,12 @@ hr .solid-hr-sk {
     width: 55px;
     border-radius: 10px;
   }
-  
+
   .country-code p {
     margin-top: 15px;
     font-size: 15px;
   }
-  
+
   .phone-input {
     background-color: white;
     padding: 10px;
@@ -581,7 +590,7 @@ hr .solid-hr-sk {
     text-align: center;
     font-size: 25px;
     font-weight: 600;
-    line-height: 52px
+    line-height: 52px;
   }
 
   .mascot-background {
